kubernetes/multi-account/dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${VSCODE_NAMESPACE}
  labels:
    app.kubernetes.io/name: vscode-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-server-ingress-oauth2
  namespace: ${VSCODE_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: ${NGINX_INGRESS_CLASS}
  tls:
    - hosts:
        - ${VSCODE_HOSTNAME}
      secretName: vscode-server-ingress-tls
  rules:
    - host: ${VSCODE_HOSTNAME}
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: oauth2-proxy
  name: oauth2-proxy
  namespace: ${VSCODE_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=${VSCODE_OAUTH2_PROXY_PROVIDER}
            - --client-id=${VSCODE_OAUTH2_PROXY_CLIENT_ID}
            - --client-secret=${VSCODE_OAUTH2_PROXY_CLIENT_SECRET}
            - --cookie-secret=${VSCODE_OAUTH2_PROXY_COOKIE_SECRET}
            - --scope=${VSCODE_OAUTH2_PROXY_SCOPE}
            - --email-domain=*
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
          resources:
            limits:
              cpu: 200m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 20Mi
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: oauth2-proxy
  name: oauth2-proxy
  namespace: ${VSCODE_NAMESPACE}
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app.kubernetes.io/name: oauth2-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-server-ingress-helper
  namespace: ${VSCODE_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ ^/stable|insiders|static|callback|web-extension-resource {
          proxy_set_header Host $host;

          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Auth-Request-Redirect $scheme://$host$request_uri;

          auth_request /oauth2/auth;
          error_page 401 = ${VSCODE_INGRESS_AUTH_SIGNIN};

          auth_request_set $user   $upstream_http_x_auth_request_user;
          auth_request_set $email  $upstream_http_x_auth_request_email;
          auth_request_set $token  $upstream_http_x_auth_request_access_token;
          proxy_set_header X-User  $user;
          proxy_set_header X-Email $email;
          proxy_set_header X-Access-Token $token;

          rewrite $uri /$user$uri;
      }
spec:
  ingressClassName: ${NGINX_INGRESS_CLASS}
  tls:
    - hosts:
        - ${VSCODE_HOSTNAME}
      secretName: vscode-server-ingress-tls
  rules:
    - host: ${VSCODE_HOSTNAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vscode-server-helper
                port:
                  number: 8000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vscode-server-helper
  name: vscode-server-helper
  namespace: ${VSCODE_NAMESPACE}
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: vscode-server-helper
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  namespace: ${VSCODE_NAMESPACE}
  name: vscode-server-helper # by convention, use the name of the service as a prefix for the name of the EndpointSlice
  labels:
    # You should set the "kubernetes.io/service-name" label. Set its value to match the name of the service
    kubernetes.io/service-name: vscode-server-helper
addressType: IPv4
ports:
  - name: vscode-server-helper
    appProtocol: http
    protocol: TCP
    port: 8000
endpoints:
  - addresses:
      - "${EXTERNAL_IP}" # the IP addresses in this list can appear in any order
---
kind: Endpoints
apiVersion: v1
metadata:
  namespace: ${VSCODE_NAMESPACE}
  name: vscode-server-helper
subsets:
  - addresses:
      - ip: "${EXTERNAL_IP}"
    ports:
      - port: 8000
        name: vscode-server-helper
