kubernetes/multi-account/template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${ACCOUNT_NAMESPACE}
  labels:
    app.kubernetes.io/name: ${ACCOUNT_NAMESPACE}
---
apiVersion: v1
kind: Service
metadata:
  name: vscode-server
  namespace: ${ACCOUNT_NAMESPACE}
  labels:
    app.kubernetes.io/name: vscode-server
spec:
  type: ClusterIP
  ports:
    - appProtocol: http
      name: http
      port: 8000
      targetPort: http
  selector:
    app.kubernetes.io/name: vscode-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode-server
  namespace: ${ACCOUNT_NAMESPACE}
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: vscode-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vscode-server
    spec:
      serviceAccountName: vscode-server
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: dind-daemon
          image: docker:dind
          imagePullPolicy: Always
          securityContext:
            privileged: true
          resources:
            limits:
              cpu: ${DIND_CPU_MAX}
              memory: ${DIND_MEM_MAX}
            requests:
              cpu: ${DIND_CPU_REQUEST}
              memory: ${DIND_MEM_REQUEST}
          volumeMounts:
            - name: vscode-server-volume
              mountPath: /var/lib/docker
              subPath: vscode-server-docker
            - name: docker-graph-run
              mountPath: /var/run
            - name: vscode-server-volume
              mountPath: /certs
              subPath: vscode-server-cert
        - name: vscode-server
          image: ${VSCODE_SERVER_IMAGE}
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - mountPath: /home
              name: vscode-server-volume
              subPath: vscode-server-home
            - mountPath: /certs
              name: vscode-server-volume
              subPath: vscode-server-cert
            - mountPath: /var/run
              name: docker-graph-run
          resources:
            limits:
              cpu: "${VSCODE_CPU_MAX}"
              memory: "${VSCODE_MEM_MAX}"
            requests:
              cpu: "${VSCODE_CPU_REQUEST}"
              memory: "${VSCODE_MEM_REQUEST}"
      volumes:
        - name: docker-graph-run
          emptyDir: {}
        - name: vscode-server-volume
          persistentVolumeClaim:
            claimName: pvc-vscode-server-${ACCOUNT_NAMESPACE}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-server
  namespace: ${ACCOUNT_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      sub_filter_types text/html text/html;
      sub_filter_once off;
      sub_filter 'href="/' 'href="/${ACCOUNT_NAMESPACE}/';
      sub_filter 'src="/' 'src="/${ACCOUNT_NAMESPACE}/';
      sub_filter 'href=\'/' 'href=\'/${ACCOUNT_NAMESPACE}/';
      sub_filter 'src=\'/' 'src=\'/${ACCOUNT_NAMESPACE}/';
    nginx.ingress.kubernetes.io/auth-url: "${VSCODE_INGRESS_AUTH_URL}"
    nginx.ingress.kubernetes.io/auth-signin: "${VSCODE_INGRESS_AUTH_SIGNIN}"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User, X-Auth-Request-Email, X-Auth-Request-Access-Token"
#    external-dns.alpha.kubernetes.io/hostname: ${ACCOUNT_HOSTNAME}
#    external-dns.alpha.kubernetes.io/target: ${VSCODE_HOSTNAME}
#    external-dns.alpha.kubernetes.io/ttl: '600'
#    cert-manager.io/cluster-issuer: "${VSCODE_CERT_CLUSTER_ISSUER}"
spec:
  ingressClassName: ${NGINX_INGRESS_CLASS}
  tls:
    - hosts:
        - ${VSCODE_HOSTNAME}
      secretName: vscode-server-ingress-tls
  rules:
    - host: ${VSCODE_HOSTNAME}
      http:
        paths:
          - path: /${ACCOUNT_NAMESPACE}/(.*)
            pathType: Prefix
            backend:
              service:
                name: vscode-server
                port:
                  number: 8000
---
${ACCOUNT_CONFIGMAP}
---
${ACCOUNT_SECRET}
---
${INGRESS_SECRET_TLS}
